# bagel-bot

./: .gitignore  Cargo.toml  deploy.sh
src/: arg.rs  batch.rs  cmd.rs  echo.rs  help.rs  help_msgs.rs  main.rs  xiv.rs
