[package]
name = "bagel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
log = "0.4.21"
serenity = "0.12.1"
stderrlog = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }

# [target.x86_64-unknown-linux-gnu]
# linker = "x86_64-unknown-linux-gnu-gcc"
